--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == Blog-Rails
 
-Blog criado seguindo o tutorial ["Getting Started with Rails"](http://guides.rubyonrails.org/getting_started.html) para testar os conhecimentos adquiridos no treinamento da 4Soft
+Blog criado seguindo o tutorial [Getting Started with Rails](http://guides.rubyonrails.org/getting_started.html) para testar os conhecimentos adquiridos no treinamento da 4Soft
